# easy-cloud-hfs

./: CMakeLists.txt  DPI_ADAPTIVE_PATCH.diff  README.md
assets/: app_icon.rc  resources.qrc
deploy/server-hfs/: api.php  index.php
deploy/server-phone/: api.php  index.php  relay.php
src/: main.cpp
src/app/: Controller.cpp  Controller.h  DataStore.cpp  DataStore.h  HttpFileServer.cpp  HttpFileServer.h  Models.cpp  Models.h  QrCodeGenerator.cpp  QrCodeGenerator.h  TunnelManager.cpp  TunnelManager.h
src/ui/: MainWindow.cpp  MainWindow.h
